Update jquery and error handling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <script src="js/libs/knockout-3.4.0.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/libs/jquery.min.js"></script>
-    <script async src="js/google_api_script.js"></script>
+    <script src="js/libs/jquery-3.0.0.min.js"></script>
+    <script async onerror="googleError()" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAD6HGzDWzuXW9bRlTLEtgWp5FNO0sUYxY&callback=init"></script>
 </body>
 </html>
